fix(): overlapping buttons

--- a/src/components/super-tabs.scss
+++ b/src/components/super-tabs.scss
@@ -3,7 +3,6 @@
 //
 
 super-tabs {
-
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -11,7 +10,6 @@ super-tabs {
   z-index: 1;
 
   > div.container {
-
     height: 100%;
     width: 100%;
     overflow: hidden;
@@ -19,19 +17,14 @@ super-tabs {
     display: flex;
     z-index: 1;
 
-
     > div.inner-container {
-
       position: relative;
       width: 100%;
       height: 100%;
       z-index: 1;
       display: flex;
       box-sizing: content-box;
-
     }
-
-
   }
 
   &:not([no-shadow]) {
@@ -70,13 +63,9 @@ super-tabs {
 }
 
 super-tabs.tabs-placement-bottom {
-
   flex-direction: column-reverse;
-
   > super-tabs-toolbar > ion-toolbar.toolbar {
-
     padding: 0;
-
     .tab-buttons-container {
       .indicator {
         top: 0;
@@ -92,9 +81,7 @@ super-tabs.tabs-placement-bottom {
       margin-top: 0;
       margin-bottom: -2px;
     }
-
   }
-
 }
 
 ion-tabs super-tabs ion-content {
@@ -104,39 +91,25 @@ ion-tabs super-tabs ion-content {
   }
 }
 
-
-
-
-
 //
 // SuperTab styles
 //
 
 super-tab {
-
   height: 100%;
-
   box-sizing: border-box;
   display: block;
-
   overflow: hidden;
   z-index: 1;
-
   flex-shrink: 0;
   position: relative;
-
 }
-
-
-
-
 
 //
 // SuperTabsContainer styles
 //
 
 super-tabs-container {
-
   width: 100%;
   overflow: hidden;
   position: relative;
@@ -153,27 +126,20 @@ super-tabs-container {
     touch-action: pan-y;
     user-select: none;
     -webkit-user-drag: none;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   }
-
 }
-
-
-
-
 
 //
 // SuperTabsToolbar styles
 //
 
 super-tabs-toolbar {
-
   z-index: 2;
   width: 100%;
   display: block;
 
   > ion-toolbar.toolbar {
-
     padding: 0;
     min-height: 0;
 
@@ -181,7 +147,7 @@ super-tabs-toolbar {
       touch-action: pan-y;
       user-select: none;
       -webkit-user-drag: none;
-      -webkit-tap-highlight-color: rgba(0,0,0,0);
+      -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
       overflow: hidden;
 
       .tab-buttons {
@@ -192,7 +158,6 @@ super-tabs-toolbar {
         width: 100%;
 
         super-tab-button {
-
           &:not(.selected) {
             ion-icon, span:not(.badge) {
               opacity: 0.7;
@@ -258,9 +223,7 @@ super-tabs-toolbar {
             top: 0;
             right: 4px;
           }
-
         }
-
       }
 
       .indicator {
@@ -277,18 +240,14 @@ super-tabs-toolbar {
 
     &.scroll-tabs {
       .tab-buttons-container {
-        //padding-left: 60px;
-
         .tab-buttons {
           position: relative;
           justify-content: flex-start;
           super-tab-button {
-            min-width: 50px;
             max-width: 100%;
             width: auto;
             display: inline-table;
             overflow: visible;
-
           }
         }
 
